# codomyrmex

./: .editorconfig  .encryption_key  .gitignore  .gitmodules  .gitnexusignore  .pre-commit-config.yaml  .tmp_check  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_UPDATE_PLAN.md  CONTRIBUTING.md  DOCUMENTATION_COMPLETENESS_AUDIT.md  DOCUMENTATION_IMPROVEMENTS.md  Dockerfile  FABRIC_INTEGRATION_SUMMARY.md  FULL_TEST_SUITE_STATUS.md  FUNDING.md  INDEX.md  JULES_MEGA_SWARM.md  JULES_TASKS.md  JULES_WAVE_1.md  JULES_WAVE_2.md  LICENSE  MODULES.md  MODULE_RELATIONSHIPS.md  Makefile  PAI.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  RULES.md  SECURITY.md  SKILL.md  (+114 more)
.Jules/: palette.md
.agent/: SKILL_INDEX.md
.benchmarks/: AGENTS.md  PAI.md  README.md  SPEC.md
.codex/: config.toml
.cursor/: README.md
.desloppify/: config.json  query.json  review_packet_blind.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: AGENTS.md  CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PAI.md  PULL_REQUEST_TEMPLATE.md  README.md  README_GITHUB.md  SPEC.md  WORKFLOW_IMPROVEMENTS.md  WORKFLOW_TESTING_GUIDE.md  dependabot.yml  lighthouse-ci.json  release-drafter.yml
.jules/: bolt.md  palette.md  sentinel.md
.pipelines/: README.md
.prd/: PRD-20260226-repo-wide-doc-audit.md
.workflows/: AGENTS.md
@output/: 01_FINAL_TESTING_COMPLETE_REPORT.md  01_FINAL_VERIFICATION_REPORT.md  01_READY_TO_TEST.md  01_TESTING_SUMMARY_FINAL.md  01_github_operations_implementation_summary.md  AGENTS.md  README.md  SPEC.md  code_examples_validation_report.json  documentation_completeness_audit_dec2025.md  documentation_consistency_report_jan2025.md  documentation_review_progress.md  error_handling_audit_report.json  quality_check_report_20251104_123427.json  quality_check_report_20251104_144148.json  quality_check_report_20251104_153140.json  quality_check_report_20260107_162223.json  quality_check_report_20260107_162458.json  quality_check_report_20260107_162543.json  quality_check_report_20260107_162701.json  quality_check_report_20260107_174452.json  quality_check_report_20260107_174718.json  quality_check_report_20260107_174855.json  quality_check_report_20260107_175040.json  quality_check_report_20260107_175154.json  quality_check_report_20260107_175729.json  quality_check_report_20260107_180052.json  quality_check_report_20260107_180223.json  quality_check_report_20260107_180426.json  quality_check_report_20260107_180651.json  quality_check_report_20260107_180921.json  quality_check_report_20260107_182833.json  quality_check_report_20260108_064939.json  quality_check_report_20260108_072458.json  quality_check_report_20260108_072840.json  quality_check_summary_20251104_123427.txt  quality_check_summary_20251104_144148.txt  quality_check_summary_20251104_153140.txt  quality_check_summary_20260107_162223.txt  quality_check_summary_20260107_162458.txt  (+41 more)
MEMORY/: README.md
ai_code_editing/: API_SPECIFICATION.md  CHANGELOG.md  MCP_TOOL_SPECIFICATION.md  README.md  SECURITY.md  USAGE_EXAMPLES.md  __init__.py  claude_task_master.py  requirements.txt
build_synthesis/: API_SPECIFICATION.md  CHANGELOG.md  MCP_TOOL_SPECIFICATION.md  README.md  SECURITY.md  USAGE_EXAMPLES.md  requirements.txt
cheatsheets/: advanced_cs.txt  full_v2.txt  refined_from_run2.txt  v1_refined.txt
code_execution_sandbox/: API_SPECIFICATION.md  CHANGELOG.md  MCP_TOOL_SPECIFICATION.md  README.md  SECURITY.md  USAGE_EXAMPLES.md  __init__.py  requirements.txt
config/: AGENTS.md  PAI.md  README.md  SPEC.md  claude_code_mcp.example.json  hermes_external_skills.example.yaml  hermes_skills_profile.example.yaml
cursorrules/: AGENTS.md  PAI.md  README.md  SPEC.md  codomyrmex-cursor.cursorrules  general.cursorrules
data_visualization/: API_SPECIFICATION.md  CHANGELOG.md  MCP_TOOL_SPECIFICATION.md  README.md  SECURITY.md  USAGE_EXAMPLES.md  __init__.py  bar_chart.py  histogram.py  line_plot.py  plotter.py  requirements.txt  scatter_plot.py
docs/: AGENTS.md  ARCHITECTURE.md  DEPENDENCIES.md  PAI.md  PAI_DASHBOARD.md  README.md  SPEC.md  index.md
documentation/: API_SPECIFICATION.md  CHANGELOG.md  MCP_TOOL_SPECIFICATION.md  README.md  SECURITY.md  USAGE_EXAMPLES.md  bug_taxonomy.md  docusaurus.config.js  requirements.txt  sidebars.js
environment_setup/: API_SPECIFICATION.md  CHANGELOG.md  MCP_TOOL_SPECIFICATION.md  README.md  SECURITY.md  USAGE_EXAMPLES.md  __init__.py  env_checker.py  requirements.txt
evaluations/: dispatch_hermes_eval.json  evaluate_orchestrators_eval.json  observe_hermes_eval.json  (+4 more)
projects/test_project/: AGENTS.md  PAI.md  README.md  SPEC.md  pyproject.toml  run_demo.py
projects/test_project/.codomyrmex/: AGENTS.md  PAI.md  README.md  SPEC.md  project.json
projects/test_project/config/: AGENTS.md  PAI.md  README.md  SPEC.md  modules.yaml  settings.yaml  workflows.yaml
projects/test_project/data/: AGENTS.md  PAI.md  README.md  SPEC.md
projects/test_project/data/input/: AGENTS.md  PAI.md  README.md  sample_data.json
projects/test_project/data/processed/: AGENTS.md  PAI.md  README.md  SPEC.md
projects/test_project/reports/: AGENTS.md  PAI.md  README.md  SPEC.md
projects/test_project/reports/templates/: AGENTS.md  PAI.md  README.md
projects/test_project/reports/visualizations/: AGENTS.md  PAI.md  README.md  dashboard.html
projects/test_project/src/: AGENTS.md  PAI.md  README.md  SPEC.md  __init__.py  agent_brain.py  analyzer.py  git_workflow.py  knowledge_search.py  llm_inference.py  main.py  mcp_explorer.py  pipeline.py  reporter.py  security_audit.py  visualizer.py
projects/test_project/tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_agent_brain_integration.py  test_analyzer.py  test_codomyrmex_integration.py  test_git_workflow_integration.py  test_knowledge_search_integration.py  test_llm_inference_integration.py  test_mcp_explorer_integration.py  test_pipeline.py  test_reporter.py  test_security_audit_integration.py  test_visualizer.py
(+17797 files in other folders)
