[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codomyrmex"
version = "0.1.5"
description = "A Modular, Extensible Coding Workspace"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Codomyrmex Contributors"}
]
maintainers = [
    {name = "Codomyrmex Contributors"}
]
keywords = ["coding", "workspace", "modular", "development", "AI", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core toolkit for code analysis and LLM integration
    "cased-kit>=1.9.0",
    # For .env file support
    "python-dotenv>=1.0.0",
    # LLM Providers
    "openai>=1.0.0",
    "anthropic>=0.64.0",
    "google-generativeai>=0.3.0",
    "google-genai>=0.1.0",
    # For semantic search and embedding
    "sentence-transformers>=2.0.0",
    "chromadb>=0.4.0",
    # For code execution sandbox
    "docker>=6.0.0",
    # For schema validation (used in model_context_protocol)
    "jsonschema>=4.23.0",
    # For static analysis
    "pylint>=3.0.0",
    "flake8>=6.0.0",
    "bandit>=1.8.0",
    "radon>=6.0.0",
    "lizard>=1.17.0",
    # For advanced code review (pyscn - install with pipx)
    "tomli>=2.0.0",
    # For data visualization
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "numpy>=2.2.0",
    # For git operations
    "GitPython>=3.1.0",
    # For specific tutorials/recipes
    "unidiff>=0.7.0",
    "requests>=2.31.0",
    # For dependency graph visualization (optional)
    # "graphviz",  # Also requires Graphviz system package to be installed
    # FastAPI - For creating API endpoints
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.8.0",
    # Loguru - For logging.
    "loguru>=0.7.0",
    # Watchdog - For monitoring file system events.
    "watchdog>=3.0.0",
    # Diff Match Patch - For generating and applying patches.
    "diff-match-patch>=20230430.0",
    # Tiktoken - For tokenizing text with OpenAI models.
    "tiktoken>=0.5.0",
    # For syntax highlighting (often a dependency for other tools)
    "Pygments>=2.15.0",
    # For YAML parsing (used in skills, config_management, documents)
    "pyyaml>=6.0.2",
    # For progress bars
    "tqdm>=4.65.0",
    # For graph structures (used in cerebrum)
    "networkx>=3.0.0",
    # For scientific computing (used in cerebrum)
    "scipy>=1.7.0",
    # For timezone support (used in logistics.schedule)
    "pytz>=2024.1",
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
    # For encryption module
    "cryptography>=41.0.0",
    # For templating module
    "mako>=1.2.0",
    "redis>=5.0.0",
    "paramiko>=3.3.0",
    "aiohttp>=3.13.3",
    "msgpack>=1.1.2",
    "fastavro>=1.12.1",
    "mnemonic>=0.21",
]

[project.optional-dependencies]
# Module-specific optional dependencies
# Install with: uv sync --extra <module-name>
# Or install all: uv sync --all-extras

code_review = [
    "pathlib>=1.0.1",
    "safety>=2.3.0",

    "typing-extensions>=4.0.0",
    "vulture>=2.7.0",
]

language_models = [

    "certifi>=2022.0.0",
    "pytest-asyncio>=0.21.0",
    "typing-extensions>=4.0.0",
    "urllib3>=1.26.0",
]

cloud = [
    "boto3>=1.28.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.17.0",
    "azure-identity>=1.13.0",
    "openstacksdk>=1.0.0",
]

serialization = [
    "protobuf>=4.0.0",
    "msgpack>=1.0.0",

    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]

parsing = [
    "tree-sitter>=0.20.0",
]

modeling_3d = [
    "isort>=5.9.0",
    "moderngl>=5.6.0",
    "pillow>=8.0.0",
    # NOTE: pyarfoundation and pyvr are not available in PyPI - commented out
    # "pyarfoundation>=0.1.0",
    "pygame>=2.0.0",
    "pyopengl>=3.1.0",
    "pyrr>=0.10.3",
    # "pyvr>=0.1.0",

    "trimesh>=3.9.0",
]

performance = [
    "psutil>=5.9.0",
]

observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "prometheus-client>=0.17.0",
    "statsd>=4.0.0",
]

physical_management = [

    "alembic>=1.7.0",
    "dynaconf>=3.1.0",
    "isort>=5.9.0",
    "marshmallow>=3.0.0",
    "mkdocs-material>=7.3.0",
    "mkdocs>=1.2.0",
    "pyserial>=3.5",
    "pytest-asyncio>=0.21.0",

    "smbus2>=0.4.0",
    "sqlalchemy>=1.4.0",
    "websockets>=10.0",
]

security_audit = [
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "pyopenssl>=23.0.0",
    "safety>=2.3.0",
]

static_analysis = [
    "pyrefly>=0.16.0",
]

scrape = [
    "firecrawl-py>=1.0.0",
]

fpf = [
    "pillow>=10.0.0",
]

crypto = [
    "cryptography>=42.0.0",
    "pillow>=10.0.0",
    "mnemonic>=0.20",
]

documents = [
    "chardet>=5.0.0",
    "pypdf>=3.0.0",
]

audio = [
    "faster-whisper>=1.0.0",  # Local Whisper STT (CTranslate2 backend)
    "pyttsx3>=2.90",          # Offline local TTS
    "edge-tts>=6.1.0",        # Free Microsoft Edge neural TTS
    "pydub>=0.25.0",          # Audio manipulation
    "soundfile>=0.12.0",      # Audio file I/O
]

video = [
    "moviepy>=1.0.3",         # Video processing
    "opencv-python>=4.8.0",   # Frame extraction, analysis
    "pillow>=10.0.0",         # Image processing
]

dark = [
    "PyMuPDF>=1.23.0",        # PDF rendering and page extraction
    "pillow>=10.0.0",         # Image processing for filters
]

formal_verification = [
    "z3-solver>=4.8.0",       # Z3 SMT solver (constraint solving, formal verification)
]

[project.urls]
Homepage = "https://github.com/docxology/codomyrmex"
Repository = "https://github.com/docxology/codomyrmex"
Issues = "https://github.com/docxology/codomyrmex/issues"
Documentation = "https://codomyrmex.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/codomyrmex"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
codomyrmex = "codomyrmex.cli:main"

[tool.coverage.run]
source = ["src/codomyrmex"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "cased.kit.*",
    "sentence_transformers.*",
    "chromadb.*",
    "docker.*",
    "matplotlib.*",
    "seaborn.*",
    "GitPython.*",
]
ignore_missing_imports = true
