[build-system]
requires = ["uv_build>=0.9,<1"]
build-backend = "uv_build"

[project]
name = "codomyrmex"
version = "1.1.3"
description = "A Modular, Extensible Coding Workspace"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Codomyrmex Contributors"}
]
maintainers = [
    {name = "Codomyrmex Contributors"}
]
keywords = ["coding", "workspace", "modular", "development", "AI", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Core toolkit for code analysis and LLM integration
    "cased-kit>=1.9.0",
    # For .env file support
    "python-dotenv>=1.0.0",
    # For schema validation (used in model_context_protocol)
    "jsonschema>=4.23.0",
    # For static analysis
    "pylint>=3.0.0",
    "bandit>=1.8.0",
    "radon>=6.0.0",
    "lizard>=1.17.0",
    # For git operations
    "GitPython>=3.1.0",
    # For specific tutorials/recipes
    "unidiff>=0.7.0",
    "requests>=2.31.0",
    # For dependency graph visualization (optional)
    # "graphviz",  # Also requires Graphviz system package to be installed
    "pydantic>=2.8.0",
    # Loguru - For logging.
    "loguru>=0.7.0",
    # Watchdog - For monitoring file system events.
    "watchdog>=3.0.0",
    # Diff Match Patch - For generating and applying patches.
    "diff-match-patch>=20230430.0",
    # For syntax highlighting (often a dependency for other tools)
    "Pygments>=2.15.0",
    # For YAML parsing (used in skills, config_management, documents)
    "pyyaml>=6.0.2",
    # For progress bars
    "tqdm>=4.65.0",
    # For timezone support (used in logistics.schedule)
    "pytz>=2024.1",
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
    # For encryption module
    "cryptography>=41.0.0",
    # For templating module
    "mako>=1.2.0",
    "aiohttp>=3.13.3",
    # numpy, scipy, networkx → uv sync --extra scientific
    # fastapi, uvicorn       → uv sync --extra api
    # paramiko               → uv sync --extra deployment
    # fastavro, msgpack      → uv sync --extra serialization
    # mnemonic               → uv sync --extra crypto
]

[project.optional-dependencies]
# Module-specific optional dependencies
# Install with: uv sync --extra <module-name>
# Or install all: uv sync --all-extras

scientific = [
    "numpy>=2.2.0",
    "scipy>=1.7.0",
    "networkx>=3.0.0",
]

api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

deployment = [
    "paramiko>=3.3.0",
]

code_review = [
    "safety>=2.3.0",

    "typing-extensions>=4.0.0",
    "vulture>=2.7.0",
]

language_models = [

    "certifi>=2022.0.0",
    "typing-extensions>=4.0.0",
    "urllib3>=1.26.0",
]

cloud = [
    "boto3>=1.28.0",
    "google-cloud-storage>=2.10.0",
    "azure-storage-blob>=12.17.0",
    "azure-identity>=1.13.0",
    "openstacksdk>=1.0.0",
]

serialization = [
    "protobuf>=4.0.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "fastavro>=1.12.1",
    "msgpack>=1.1.2",
]

parsing = [
    "tree-sitter>=0.20.0",
]

modeling_3d = [
    "moderngl>=5.6.0",
    "pillow>=8.0.0",
    # NOTE: pyarfoundation and pyvr are not available in PyPI - commented out
    # "pyarfoundation>=0.1.0",
    "pygame>=2.0.0",
    "pyopengl>=3.1.0",
    "pyrr>=0.10.3",
    # "pyvr>=0.1.0",

    "trimesh>=3.9.0",
]

performance = [
    "psutil>=5.9.0",
]

observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "prometheus-client>=0.17.0",
    "statsd>=4.0.0",
]

physical_management = [

    "alembic>=1.7.0",
    "dynaconf>=3.1.0",
    "marshmallow>=3.0.0",
    "mkdocs-material>=7.3.0",
    "mkdocs>=1.2.0",
    "pyserial>=3.5",

    "smbus2>=0.4.0",
    "sqlalchemy>=1.4.0",
    "websockets>=10.0",
]

security_audit = [
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "pyopenssl>=23.0.0",
    "safety>=2.3.0",
]

static_analysis = [
    "pyrefly>=0.16.0",
]

scrape = [
    "firecrawl-py>=1.0.0",
]

fpf = [
    "pillow>=10.0.0",
]

crypto = [
    "pillow>=10.0.0",
    "mnemonic>=0.21",
]

documents = [
    "chardet>=5.0.0",
    "pypdf>=3.0.0",
]

audio = [
    "faster-whisper>=1.0.0",  # Local Whisper STT (CTranslate2 backend)
    "pyttsx3>=2.90",          # Offline local TTS
    "edge-tts>=6.1.0",        # Free Microsoft Edge neural TTS
    "pydub>=0.25.0",          # Audio manipulation
    "soundfile>=0.12.0",      # Audio file I/O
]

video = [
    "moviepy>=1.0.3",         # Video processing
    "opencv-python>=4.8.0",   # Frame extraction, analysis
    "pillow>=10.0.0",         # Image processing
]

dark = [
    "PyMuPDF>=1.23.0",        # PDF rendering and page extraction
    "pillow>=10.0.0",         # Image processing for filters
]

formal_verification = [
    "z3-solver>=4.8.0",       # Z3 SMT solver (constraint solving, formal verification)
]

obsidian = [
    "python-frontmatter>=1.0.0",  # Robust YAML frontmatter parsing
    "pyyaml>=6.0.2",               # YAML frontmatter serialization
]

calendar = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
]

email = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    "agentmail>=0.2.17",
]

# LLM provider SDKs — install with: uv sync --extra llm_providers
# (openai, anthropic, google-* are heavy optional deps, not needed for all installs)
llm_providers = [
    "openai>=1.0.0",
    "anthropic>=0.64.0",
    "google-generativeai>=0.3.0",
    "google-genai>=0.1.0",
    "absl-py>=1.4.0",       # Required by google-generativeai
    "tiktoken>=0.5.0",      # OpenAI tokenizer (optional, co-installed with openai)
]

# Semantic search and vector DB — install with: uv sync --extra embedding
embedding = [
    "sentence-transformers>=2.0.0",
    "chromadb>=0.4.0",
]

# Docker containerization support — install with: uv sync --extra containerization
containerization = [
    "docker>=6.0.0",
]

# Data visualization — install with: uv sync --extra data_visualization
data_visualization = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]

# Redis cache/queue support — install with: uv sync --extra cache
cache = [
    "redis>=5.0.0",
]

# soul.py — Markdown-based persistent LLM agent memory — install with: uv sync --extra soul
soul = [
    "soul-agent>=0.1.4",  # Zero-database, file-based persistent agent memory
]

pai_pm = []
# NOTE: requires bun runtime (https://bun.sh) — no Python packages needed
# After install: cd src/codomyrmex/pai_pm/server && bun install

google_workspace = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/docxology/codomyrmex"
Repository = "https://github.com/docxology/codomyrmex"
Issues = "https://github.com/docxology/codomyrmex/issues"
Documentation = "https://codomyrmex.readthedocs.io/"
Changelog = "https://github.com/docxology/codomyrmex/blob/main/CHANGELOG.md"

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-root = "src"
source-include = ["src/codomyrmex/**"]
source-exclude = [
    "**/.cursor/**",
    "**/.git/**",
    "**/__pycache__/**",
    "**/htmlcov/**",
    "**/.mypy_cache/**",
    "**/.pytest_cache/**",
    "**/tests/**",
    "**/vendor/**",
    "**/node_modules/**",
    "**/*.pyc",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "hypothesis>=6.151.9",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.3",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
]
lint = ["ruff>=0.11.0", "ty"]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "fakeredis>=2.0.0",
    "pyyaml>=6.0.2",
    "mutmut>=3.4.0",
    "fire>=0.5.0",
]

[project.scripts]
codomyrmex = "codomyrmex.cli:main"

[project.entry-points."claude.skills"]
codomyrmex = "codomyrmex.agents.pai:mcp_bridge"

[tool.coverage.run]
source = ["src/codomyrmex"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
]

[tool.coverage.report]
fail_under = 31
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["src/codomyrmex"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--import-mode=importlib",
    "--verbose",
    "--tb=short",
    "--cov=src/codomyrmex",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=31",
    "--timeout=300",
    "--timeout-method=thread",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may require external services)",
    "smoke: Smoke tests that exercise code paths without explicit assertions",
    "slow: Slow tests (>10s execution time)",
    "performance: Performance and benchmarking tests",
    "examples: Example validation tests",
    "network: Tests requiring network access",
    "database: Tests requiring database access",
    "external: Tests requiring external services",
    "security: Security-related tests",
    "asyncio: Asynchronous tests",
    "crypto: Cryptography tests",
    "orchestrator: Orchestrator and workflow tests",
    "soul: soul module tests (persistent markdown-memory LLM agents)",
    "aider: Aider AI pair programming tests",
    "pai_pm: PAI Project Manager module tests (requires bun for server tests)",
    "google_workspace: Google Workspace API and gws CLI tests",
]
filterwarnings = [
    "ignore:The embodiment module is deprecated:DeprecationWarning",
    "ignore:codomyrmex\\.defense is deprecated:DeprecationWarning",
    "ignore:builtin type Swig.*has no __module__ attribute:DeprecationWarning",
    "ignore:ast\\.Str is deprecated:DeprecationWarning",
    "ignore:The verify_requirements argument is now a no-op:DeprecationWarning",
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated:DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore:.*google\\.generativeai.*:FutureWarning",
    "ignore::pytest.PytestCollectionWarning",
]



# Ruff configuration (replaces flake8, black, isort, pyupgrade)
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Formatter conflicts
    "COM812",   # trailing comma (conflicts with ruff format)
    "ISC001",   # string concat (conflicts with ruff format)
    "E501",     # line too long (handled by formatter)

    # Docstring rules (enable selectively later when docstring push begins)
    "D",        # all pydocstyle rules

    # Type annotation noise (legacy codebase has ~33k missing annotations)
    "ANN001",   # missing type for function argument
    "ANN002",   # missing type for *args
    "ANN003",   # missing type for **kwargs
    "ANN201",   # missing return type for public function
    "ANN202",   # missing return type for private function
    "ANN204",   # missing return type for special method
    "ANN401",   # Dynamically typed Any

    # Assert usage (44k violations — assert is intentional in this codebase)
    "S101",     # use of assert (tests already ignored via per-file)

    # Import style (legacy pattern — import-inside-function is intentional for optional deps)
    "PLC0415",  # import outside top-level (6.7k — many lazy/optional imports)

    # Magic values (too noisy for a config-heavy codebase)
    "PLR2004",  # magic value comparison

    # TODO/FIXME management
    "TD002",    # missing TODO author
    "TD003",    # missing TODO link
    "FIX002",   # line contains TODO

    # Complexity/style (keep code readable without enforcement)
    "C901",     # too complex
    "B008",     # function calls in argument defaults (FastAPI Depends pattern)
    "PLR0913",  # too many arguments (complex module configs)
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements

    # Exception handling style (enforce gradually)
    "TRY003",   # raise vanilla args (1.6k — would require exception refactor)
    "EM101",    # raw string in exception (refactor to variables — later)
    "EM102",    # f-string in exception (refactor to variables — later)
    "BLE001",   # blind except (1.9k — needs case-by-case audit)

    # Logging style (legacy codebase uses f-strings in logging)
    "G004",     # logging f-string (2.2k — migrate to % format later)

    # Private member access (common in test code and internal wiring)
    "SLF001",   # private member access (2.6k — internal module cross-refs)

    # Try/except style
    "TRY300",   # try-consider-else
    "TRY400",   # error-instead-of-exception

    # Pathlib enforcement (migrate gradually from os.path)
    "PTH",      # all pathlib rules (PTH100-PTH211, ~1.5k — migrate later)

    # Argument/method unused (common in ABC/interface patterns)
    "ARG001",   # unused function argument
    "ARG002",   # unused method argument
    "ARG005",   # unused lambda argument (389 — lambda convention)

    # Miscellaneous noise
    "FBT",      # boolean trap (FBT001/002/003 — too opinionated for this codebase)
    "ERA001",   # commented-out code (will clean up later in targeted pass)
    "INP001",   # implicit namespace package (scripts dir has no __init__.py by design)
    "RUF009",   # dataclass default mutable (false positives with Field())

    # v1.1.2: Phase 2 triage additions
    "NPY002",   # numpy legacy random (348 — false positives on non-numpy code)
    "N806",     # non-lowercase variable (283 — scientific/mathematical naming)
    "DTZ005",   # tz-naive datetime.now() (470 — migrate to tz-aware later)
    "PERF401",  # manual list comprehension (302 — many are clearer as loops)
    "RET504",   # unnecessary assignment before return (128 — readability choice)
    "S607",     # partial executable path (315 — scripts call local tooling)
    "T201",     # print statement in library code (2,464 — keep in scripts/)
    "PGH003",   # bare type: ignore without code (100 — mypy→ty migration)

    # v1.1.3: Phase 3 triage additions
    "EXE001",   # shebang not executable (303 — scripts are run via python, not directly)
    "S603",     # subprocess without shell=True (240 — intentional subprocess usage)
    "S311",     # suspicious non-crypto random (163 — false positives on test data)
    "S106",     # hardcoded password func arg (136 — test fixtures, not real credentials)
    "S108",     # hardcoded temp file (116 — test fixtures use /tmp intentionally)
    "S105",     # hardcoded password string (86 — test fixtures)
    "S110",     # try-except-pass (91 — intentional silencing in optional dep imports)
    "S310",     # suspicious url open (54 — intentional URL fetching in tools)
    "PT011",    # pytest.raises too broad (133 — acceptable in integration tests)
    "PLW0603",  # global statement (65 — singletons and module-level caches)
    "RUF012",   # mutable class default (67 — false positives with ClassVar patterns)
    "PYI056",   # unsupported method call on __all__ (78 — dynamic module export)
    "DTZ001",   # datetime without tzinfo (79 — migrate with DTZ005 later)
    "A002",     # builtin argument shadowing (131 — id/type/format common in domain)
    "G201",     # logging exc_info (84 — intentional exception logging)
    "TRY301",   # raise within try (85 — re-raise patterns)
    "ASYNC109", # async function with timeout (46 — intentional async patterns)
    "RUF001",   # ambiguous unicode (42 — intentional unicode in docs/strings)
    "PLW2901",  # redefined loop name (41 — common pattern in mutation)
    "SIM115",   # open file with context handler (35 — many are in with blocks already)
    "PLW1510",  # subprocess.run without check (213 — return code handled manually)
    "N803",     # invalid argument name (32 — mathematical/domain naming)
    "RUF002",   # ambiguous unicode in docstring (32 — intentional unicode)
    "E722",     # bare except (28 — legacy pattern, refactor later)
    "S324",     # hashlib insecure hash (24 — MD5/SHA1 for checksums, not crypto)
    "DTZ006",   # datetime.fromtimestamp without tz (21 — migrate with DTZ later)
    "A001",     # builtin variable shadowing (24 — id/type/list common in domain)
    "ASYNC221", # run process in async function (17 — intentional subprocess in async)
    "SIM105",   # suppressible exception (17 — contextlib.suppress explicit style)
    "SIM117",   # multiple with statements (17 — readability choice)
    "S104",     # hardcoded bind all interfaces (16 — dev servers bind 0.0.0.0)
    "SIM102",   # collapsible if (75 — readability choice, many are intentional)
    "F841",     # local variable assigned but unused (auto-fix can break logic)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]
"tests/**/*" = ["S101", "PLR2004", "ANN", "B011", "SLF001", "ARG", "PT011", "S106", "S108", "S310"]
"scripts/**/*.py" = ["T20", "INP001", "ANN", "S101", "BLE001", "EXE001", "E402", "PLW1510"]
"**/mcp_tools.py" = ["ANN", "ARG001"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest.mock" = { msg = "Zero-Mock Policy: Use real functional implementations and authentic fixtures instead of mocks." }
"mock" = { msg = "Zero-Mock Policy: Use real functional implementations and authentic fixtures instead of mocks." }
"pytest_mock" = { msg = "Zero-Mock Policy: Use real functional implementations and authentic fixtures instead of mocks." }
"monkeypatch" = { msg = "Zero-Mock Policy: Do not patch internals. Use real implementations." }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ty type checker (replaces mypy — faster, from Astral team)
[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# v1.1.1: Tightened from initial lenient config
possibly-unresolved-reference = "warn"
possibly-unbound = "warn"
unresolved-import = "ignore"
possibly-missing-attribute = "ignore"
invalid-argument-type = "ignore"
not-subscriptable = "ignore"
unresolved-attribute = "ignore"
unused-ignore-comment = "warn"

# v1.1.0: Mutation testing configuration (expanded from 3 → 6 files)
[tool.mutmut]
paths_to_mutate = [
    "src/codomyrmex/model_context_protocol/validation.py",
    "src/codomyrmex/agents/pai/trust_gateway.py",
    "src/codomyrmex/model_context_protocol/schemas/mcp_schemas.py",
    "src/codomyrmex/security/digital/secrets_detector.py",
    "src/codomyrmex/orchestrator/core.py",
    "src/codomyrmex/events/core/event_bus.py",
]
tests_dir = ["../src/codomyrmex/tests/unit/mcp/", "../src/codomyrmex/tests/unit/agents/", "../src/codomyrmex/tests/unit/validation/", "../src/codomyrmex/tests/unit/security/", "../src/codomyrmex/tests/unit/orchestrator/", "../src/codomyrmex/tests/unit/events/"]
do_not_mutate = [
    "*/vendor/*",
    "*/htmlcov/*",
    "*/__pycache__/*",
    "*/tests/*",
]
also_copy = ["src/codomyrmex/tests/unit/mcp/", "src/codomyrmex/tests/unit/agents/", "src/codomyrmex/tests/unit/validation/", "src/codomyrmex/tests/unit/security/", "src/codomyrmex/tests/unit/orchestrator/", "src/codomyrmex/tests/unit/events/", "conftest.py"]
pytest_add_cli_args = ["--no-cov", "-p", "no:timeout", "-p", "no:benchmark", "--override-ini=addopts=", "--rootdir=.."]
debug = false

